# concerto

./: .gitignore  Dockerfile.agent  Dockerfile.chaos  Dockerfile.controller  Dockerfile.dashboard  Dockerfile.mcp  LICENSE  README.md  alpha.yaml  beta.yaml  docker-compose.integration.yml  docker-compose.yml  pyproject.toml  tox.ini
.github/prompts/: format-and-check.prompt.md  get-agent.prompt.md  get-job.prompt.md  list-agents.prompt.md  list-jobs.prompt.md  plan-testSchedulingService.prompt.md  queue-job.prompt.md  remove-agent.prompt.md
.github/workflows/: ci.yml  integration.yml
docker/: Dockerfile.controller  Dockerfile.mcp  Dockerfile.simulator  docker-compose.integration.yml  docker-compose.yml
docs/: agent-removal-sequence.mmd  heartbeat-sequence.mmd  job-lifecycle-sequence.mmd
scripts/: demo.sh  patch_workspace.py
tests/: conftest.py
tests/unit/: test_dispatcher.py  test_executor.py  test_heartbeat.py  test_messages.py
