[project]
name = "concerto"
version = "0.1.0"
description = "Test Scheduling Service for HIL testbed management"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "concerto-shared",
    "concerto-controller",
    "concerto-agent",
    "concerto-chaos",
    "concerto-dashboard",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
concerto-shared = { workspace = true }
concerto-controller = { workspace = true }
concerto-agent = { workspace = true }
concerto-chaos = { workspace = true }
concerto-dashboard = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
