[project]
name = "concerto"
version = "0.1.0"
description = "Test Scheduling Service for HIL testbed management"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "concerto-shared",
    "concerto-controller",
    "concerto-agent",
    "concerto-simulator",
    "concerto-dashboard",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
concerto-shared = { workspace = true }
concerto-controller = { workspace = true }
concerto-agent = { workspace = true }
concerto-simulator = { workspace = true }
concerto-dashboard = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = [
    "packages/controller/tests",
    "packages/agent/tests",
    "packages/shared/tests",
]

[tool.coverage.run]
source = [
    "concerto_shared",
    "concerto_controller",
    "concerto_agent",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 15
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
style = "sphinx"

[tool.pylint.main]
# Monorepo: pylint can't resolve workspace editable installs
ignore-patterns = ["^\\..*", "^\\d.*"]
ignore-paths = ["packages/controller/migrations"]

[tool.pylint."messages control"]
disable = [
    "import-error",            # E0401 — false positive in uv workspace monorepo
    "no-member",               # E1101 — false positive with websockets library
    "not-callable",            # E1102 — false positive with SQLAlchemy
    "import-outside-toplevel", # C0415 — intentional circular-import avoidance
    "broad-exception-caught",  # W0718 — intentional in WS/network error handling
    "duplicate-code",          # R0801 — similar patterns across packages are acceptable
    "global-statement",        # W0603 — used intentionally for singleton pattern
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8
max-attributes = 12
min-public-methods = 0
max-statements = 60
max-locals = 25
max-branches = 15
